# coaco-robot

./: .gitignore  LICENSE  LOG.md  README.md  robot.launch
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
Docs/: controller_fsm_states.odg  general_flow.odg  node_diagram.odg
OpenCR/turtlebot3_core_servo/: turtlebot3_core_servo.ino
Poster/: logo.xcf  poster.odg  posterTemplate.pptx
Poster/Latex/: poster.fdb_latexmk  poster.fls  poster.tex  poster.tex.backup
Presentation/: node-scheme.odg
camera-calibration/: CMakeLists.txt  calibration.py
can-detector/: can-detector.py  readme.md
can-detector2/: .gitignore
can_detector/: readme.md
opencr/servo_ros/: servo_ros.ino
src/cam_feeder/: CMakeLists.txt  package.xml
src/cam_feeder/msg/: CamFeed.msg
src/cam_feeder/src/: cam-feeder.py
src/can_detector/: CMakeLists.txt  package.xml
src/can_detector/demo/: .can-detector.py.swp
src/can_detector/msg/: CanDetection.msg
src/can_detector/src/: can-detector.py  detector.py
src/coaco/: CMakeLists.txt  package.xml  robot.launch  simon.launch
src/cold_detector/: CMakeLists.txt  package.xml
src/cold_detector/src/: detector.py
src/controller_coaco/: CMakeLists.txt  package.xml
src/controller_coaco/src/: constants.py  controller.py  (+1 more)
src/hc_sr04_driver/: CMakeLists.txt  package.xml
src/marker_detector/: .package.xml.swp  CMakeLists.txt  marker_detector.py  package.xml
src/rosmovement/: CMakeLists.txt  package.xml
src/rpi_neopixel/: CMakeLists.txt  package.xml  rpi_neopixel.launch
(+14 files in other folders)
